# todo_fastapi_poetry

./: DockerFile.dev  pyproject.toml
tests/: test_tasks.py
todo_poetry/: main.py  settings.py
todo_poetry/public/: __init__.py
todo_poetry/public/task/: crud.py  models.py  views.py
